NEWS: belatedly add entries for 1.20.0 release

--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,9 @@ Overview of changes since network-manager-applet-1.18.0
 * Add flatpak build configuration
 * applet: hide unmanaged ethernet devices in nm-applet
 * applet: fix Wi-Fi scan requests with appindicator
+* applet: add stock symbolic icons
 * editor: fix drop down list for connection.secondaries
+* editor: remove NotShowIn=GNOME
 
 =======================================================
 network-manager-applet-1.18.0
