Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -1332,7 +1332,7 @@ msgstr "El temps d'envelliment de l'adreça MAC ethernet, en segons"
 
 #: src/connection-editor/ce-page-bridge.ui:490
 msgid "Group _forward mask"
-msgstr "Mascara de grup _endavant"
+msgstr "_Màscara reenviament de grup"
 
 #: src/connection-editor/ce-page-bridge.ui:504
 msgid ""
