--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,18 @@
 =======================================================
+network-manager-applet-1.22.0
+Overview of changes since network-manager-applet-1.20.0
+=======================================================
+
+* Support activating WireGuard connections as VPNs from the applet.
+* Fix nm-connection-editor crash when evaluating secondary
+  connections.
+* Show missing toggle in the 802.1X security page of the editor.
+* Fix updating Polkit permission in the editor.
+* Adapt peers table in the WireGuard editor page when the window is
+  resized.
+* Update translations.
+
+=======================================================
 network-manager-applet-1.20.0
 Overview of changes since network-manager-applet-1.18.0
 =======================================================
