--- a/po/as.po
+++ b/po/as.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: network-manager-applet master\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2021-07-05 11:42+0200\n"
+"POT-Creation-Date: 2021-07-05 11:47+0200\n"
 "PO-Revision-Date: 2014-08-20 18:20+0530\n"
 "Last-Translator: Nilamdyuti Goswami <ngoswami@redhat.com>\n"
 "Language-Team: Assamese <kde-i18n-doc@kde.org>\n"
@@ -1208,9 +1208,10 @@ msgid "_Primary"
 msgstr "প্ৰাথমিক (_P):"
 
 #: src/connection-editor/ce-page-bond.ui:495
+#, fuzzy
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
-"the active slave when it is available."
+"the active port when it is available."
 msgstr ""
 "প্ৰাথমিক ডিভাইচৰ আন্তঃপৃষ্ঠ নাম। যদি সংহত, এই ডিভাইচ উপলব্ধ অৱস্থাত সদায় সক্ৰিয় "
 "স্লেইভ হব।"
@@ -3918,18 +3919,19 @@ msgstr "WiMAX সংযোগ %d"
 
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
-msgid "Duplicate slaves"
+#, fuzzy
+msgid "Duplicate ports"
 msgstr "প্ৰতিলিপি স্লেইভসমূহ"
 
 #: src/connection-editor/page-master.c:222
 #, fuzzy, c-format
-msgid "Slaves “%s” and “%s” both apply to device “%s”"
+msgid "Ports “%s” and “%s” both apply to device “%s”"
 msgstr "স্লেইভ '%s' আৰু '%s' দুয়ো ডিভাইচ '%s' লৈ প্ৰযোজ্য নহয়"
 
 #: src/connection-editor/page-master.c:233
 #, fuzzy, c-format
 msgid ""
-"Slaves “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
+"Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr ""
 "স্লেইভ '%s' আৰু '%s' একেটা ভৌতিক ডিভাইচৰ বিভিন্ন ভাৰছুৱেল পৰ্ট ('%s' আৰু '%s') লৈ "
@@ -3937,8 +3939,8 @@ msgstr ""
 
 #: src/connection-editor/page-master.c:357
 #, c-format
-msgid "%s slave %d"
-msgstr "%s স্লেইভ %d"
+msgid "%s port %d"
+msgstr ""
 
 #: src/connection-editor/page-mobile.c:297
 msgid "Could not load mobile broadband user interface."
