--- a/po/de.po
+++ b/po/de.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2021-07-05 11:42+0200\n"
+"POT-Creation-Date: 2021-07-05 11:47+0200\n"
 "PO-Revision-Date: 2018-08-25 23:06+0200\n"
 "Last-Translator: Mario Blättermann <mario.blaettermann@gmail.com>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
@@ -1220,10 +1220,10 @@ msgstr "_Primär"
 #: src/connection-editor/ce-page-bond.ui:495
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
-"the active slave when it is available."
+"the active port when it is available."
 msgstr ""
 "Der Schnittstellenname des Primärgerätes. Falls gesetzt, wird dieses Gerät "
-"bei Verfügbarkeit immer der aktive Sklave sein."
+"bei Verfügbarkeit immer der aktive Port sein."
 
 #: src/connection-editor/ce-page-bond.ui:507
 #: src/connection-editor/ce-page-ethernet.ui:188
@@ -3932,27 +3932,27 @@ msgstr "MACSEC-Verbindung %d"
 
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
-msgid "Duplicate slaves"
-msgstr "Doppelte Sklaven"
+msgid "Duplicate ports"
+msgstr "Doppelte Ports"
 
 #: src/connection-editor/page-master.c:222
 #, c-format
-msgid "Slaves “%s” and “%s” both apply to device “%s”"
-msgstr "Sklaven »%s« und »%s« bewerben dasselbe Gerät »%s«"
+msgid "Ports “%s” and “%s” both apply to device “%s”"
+msgstr "Ports »%s« und »%s« passen auf dasselbe Gerät »%s«"
 
 #: src/connection-editor/page-master.c:233
 #, c-format
 msgid ""
-"Slaves “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
+"Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr ""
-"Sklaven »%s« und »%s« bewerben verschiedene virtuelle Ports (»%s« und »%s«) "
+"Ports »%s« und »%s« passen auf verschiedene virtuelle Ports (»%s« und »%s«) "
 "auf demselben physikalischen Gerät."
 
 #: src/connection-editor/page-master.c:357
 #, c-format
-msgid "%s slave %d"
-msgstr "%s Sklave %d"
+msgid "%s port %d"
+msgstr "%s Port %d"
 
 #: src/connection-editor/page-mobile.c:297
 msgid "Could not load mobile broadband user interface."
@@ -4430,6 +4430,7 @@ msgstr "PEM-Zertifikate (*.pem, *.crt, *.cer)"
 msgid "DER, PEM, or PKCS#12 private keys (*.der, *.pem, *.p12, *.key)"
 msgstr "DER-, PEM-, oder PKCS#12-Privatschlüssel (*.der, *.pem, *.p12, *.key)"
 
+#, c-format
 #~ msgid "missing EAP-FAST PAC file"
 #~ msgstr "EAP-FAST PAC-Datei fehlt"
 
