--- a/po/km.po
+++ b/po/km.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: po_nm-applet-km\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2021-07-05 11:42+0200\n"
+"POT-Creation-Date: 2021-07-05 11:47+0200\n"
 "PO-Revision-Date: 2014-04-23 15:44+0700\n"
 "Last-Translator: Sophea Sok <sophea@open.org.kh>\n"
 "Language-Team: Khmer <>\n"
@@ -1205,9 +1205,10 @@ msgid "_Primary"
 msgstr "ចម្បង៖"
 
 #: src/connection-editor/ce-page-bond.ui:495
+#, fuzzy
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
-"the active slave when it is available."
+"the active port when it is available."
 msgstr "ឈ្មោះ​ចំណុច​ប្រទាក់​របស់​ឧបករណ៍​ច្បង។ បើ​បាន​កំណត់ ឧបករណ៍​នេះ​នឹង​ជា​កូនចៅ​សកម្ម​ជានិច្ច​ពេល​វា​មាន។"
 
 #: src/connection-editor/ce-page-bond.ui:507
@@ -3891,26 +3892,27 @@ msgstr "ការ​តភ្ជាប់ WiMAX %d"
 
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
-msgid "Duplicate slaves"
+#, fuzzy
+msgid "Duplicate ports"
 msgstr "កូន​ចៅ​ស្ទួន"
 
 #: src/connection-editor/page-master.c:222
 #, fuzzy, c-format
-msgid "Slaves “%s” and “%s” both apply to device “%s”"
+msgid "Ports “%s” and “%s” both apply to device “%s”"
 msgstr "កូន​ចៅ '%s' និង '%s' ទាំង​ពីរ​គឺ​បាន​អនុវត្ត​ទៅកាន់​ឧបករណ៍ '%s'"
 
 #: src/connection-editor/page-master.c:233
 #, fuzzy, c-format
 msgid ""
-"Slaves “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
+"Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr ""
 "កូនចៅ '%s' និង '%s' អនុវត្ត​ទៅកាន់​ច្រក​និម្មិត​ផ្សេងគ្នា ('%s' និង '%s') របស់​ឧបករណ៍​ដូចគ្នា។"
 
 #: src/connection-editor/page-master.c:357
 #, c-format
-msgid "%s slave %d"
-msgstr "%s កូន​ចៅ %d"
+msgid "%s port %d"
+msgstr ""
 
 #: src/connection-editor/page-mobile.c:297
 msgid "Could not load mobile broadband user interface."
