--- a/po/kn.po
+++ b/po/kn.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2021-07-05 11:42+0200\n"
+"POT-Creation-Date: 2021-07-05 11:47+0200\n"
 "PO-Revision-Date: 2014-12-02 05:10-0500\n"
 "Last-Translator: Shankar <svenkate@redhat.com>\n"
 "Language-Team: kn_IN <kde-i18n-doc@kde.org>\n"
@@ -1245,7 +1245,7 @@ msgstr "ಪ್ರಾಥಮಿಕ DNS:"
 #: src/connection-editor/ce-page-bond.ui:495
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
-"the active slave when it is available."
+"the active port when it is available."
 msgstr ""
 
 #: src/connection-editor/ce-page-bond.ui:507
@@ -3944,25 +3944,25 @@ msgstr "DSL ಸಂಪರ್ಕ %d"
 
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
-msgid "Duplicate slaves"
+msgid "Duplicate ports"
 msgstr ""
 
 #: src/connection-editor/page-master.c:222
 #, c-format
-msgid "Slaves “%s” and “%s” both apply to device “%s”"
+msgid "Ports “%s” and “%s” both apply to device “%s”"
 msgstr ""
 
 #: src/connection-editor/page-master.c:233
 #, c-format
 msgid ""
-"Slaves “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
+"Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr ""
 
 #: src/connection-editor/page-master.c:357
 #, c-format
-msgid "%s slave %d"
-msgstr "%s ಸ್ಲೇವ್ %d"
+msgid "%s port %d"
+msgstr ""
 
 #: src/connection-editor/page-mobile.c:297
 msgid "Could not load mobile broadband user interface."
@@ -5257,11 +5257,6 @@ msgstr "DER, PEM, ಅಥವ PKCS#12 ಖಾಸಗಿ ಕೀಲಿಗಳು (*.der
 
 #~ msgid "Wireless"
 #~ msgstr "ವೈರ್ಲೆಸ್"
-
-#~ msgid ""
-#~ "Select the type of connection that will be used for the slaves of this "
-#~ "bond."
-#~ msgstr "ಈ ಬಾಂಡ್‌ನ ಸ್ಲೇವ್‌ಗಳಲ್ಲಿ ಬಳಸಲಾಗುವ ಸಂಪರ್ಕದ ಬಗೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ."
 
 #~ msgid "Automatic (PPP)"
 #~ msgstr "ಸ್ವಯಂಚಾಲಿತ (PPP)"
