--- a/po/tg.po
+++ b/po/tg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: network-manager-applet nma-0-9-8\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2021-07-05 11:42+0200\n"
+"POT-Creation-Date: 2021-07-05 11:47+0200\n"
 "PO-Revision-Date: 2014-02-07 17:37+0500\n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: Tajik <tg@li.org>\n"
@@ -1251,7 +1251,7 @@ msgstr "_Асосӣ:"
 #, fuzzy
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
-"the active slave when it is available."
+"the active port when it is available."
 msgstr ""
 "Агар танзим шавад, номи истифодашуда барои дастгоҳ дар интерфейси корбар [x-"
 "gvfs-name=]"
@@ -4002,25 +4002,25 @@ msgstr "Пайвасти WiMAX %d"
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
 #, fuzzy
-msgid "Duplicate slaves"
+msgid "Duplicate ports"
 msgstr "Пайвасти фармонбарон"
 
 #: src/connection-editor/page-master.c:222
 #, fuzzy, c-format
-msgid "Slaves “%s” and “%s” both apply to device “%s”"
+msgid "Ports “%s” and “%s” both apply to device “%s”"
 msgstr "Татбиқкунии танзимоти нав қатъ шуд: %s"
 
 #: src/connection-editor/page-master.c:233
 #, fuzzy, c-format
 msgid ""
-"Slaves “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
+"Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr "Сканкунии %s барои портҳои кушод"
 
 #: src/connection-editor/page-master.c:357
 #, c-format
-msgid "%s slave %d"
-msgstr "%s фармонбари %d"
+msgid "%s port %d"
+msgstr ""
 
 #: src/connection-editor/page-mobile.c:297
 #, fuzzy
