Update German translation
- Use Bridge/Bond as technical term in German
- Cleanup fuzzy items

--- a/po/de.po
+++ b/po/de.po
@@ -1261,7 +1261,7 @@ msgstr "_Hairpin-Modus"
 
 #: src/connection-editor/ce-page-bridge.ui:62
 msgid "Bridged _connections"
-msgstr "_Verbindungen über Brücke"
+msgstr "Bridge-_Verbindungen"
 
 #: src/connection-editor/ce-page-bridge.ui:218
 msgid "_Forward delay"
@@ -1301,7 +1301,7 @@ msgid ""
 "snooping was automatically disabled due to hash collisions, the system may "
 "refuse to enable the feature until the collisions are resolved."
 msgstr ""
-"Legt fest, ob »IGMP snooping« für diese Brücke aktiviert wird. Beachten Sie, "
+"Legt fest, ob »IGMP snooping« für diese Bridge aktiviert wird. Beachten Sie, "
 "dass das System diese Funktion automatisch verweigern kann, solange eine "
 "Hash-Kollision erkannt wird."
 
@@ -1321,8 +1321,8 @@ msgid ""
 "STP priority for this bridge. Lower values are “better”; the lowest priority "
 "bridge will be elected the root bridge."
 msgstr ""
-"STP-Priorität für diese Brücke. Niedrigere Werte sind »besser«. Die Brücke "
-"mit der niedrigsten Priorität wird zur »root-Brücke« gewählt."
+"STP-Priorität für diese Bridge. Niedrigere Werte sind »besser«. Die Bridge "
+"mit der niedrigsten Priorität wird zur »root-Bridge« gewählt."
 
 #: src/connection-editor/ce-page-bridge.ui:378
 msgid "_Max age"
@@ -2098,7 +2098,6 @@ msgid "Strict"
 msgstr "Streng"
 
 #: src/connection-editor/ce-page-macsec.ui:58
-#, fuzzy
 msgid "_Device name"
 msgstr "Gerätename"
 
@@ -2107,7 +2106,6 @@ msgid "The name of the MACsec device."
 msgstr "Der Name des MACsec-Geräts."
 
 #: src/connection-editor/ce-page-macsec.ui:85
-#, fuzzy
 msgid "_Parent device"
 msgstr "Übergeordnetes Gerät"
 
@@ -2134,9 +2132,8 @@ msgid "Keys"
 msgstr "Schlüssel"
 
 #: src/connection-editor/ce-page-macsec.ui:135
-#, fuzzy
 msgid "_Mode"
-msgstr "Modus"
+msgstr "_Modus"
 
 #: src/connection-editor/ce-page-macsec.ui:148
 msgid ""
@@ -2169,17 +2166,14 @@ msgid "Parameters"
 msgstr "Parameter"
 
 #: src/connection-editor/ce-page-macsec.ui:234
-#, fuzzy
 msgid "_Validation"
 msgstr "Überprüfung"
 
-# Gemeint sind Ethernet-Rahmen
 #: src/connection-editor/ce-page-macsec.ui:247
 msgid "Specifies the validation mode for incoming frames"
-msgstr "Legt den Prüfmodus für eingehende Rahmen fest"
+msgstr "Legt den Prüfmodus für eingehende Ethernet-Frames fest"
 
 #: src/connection-editor/ce-page-macsec.ui:266
-#, fuzzy
 msgid "_SCI port"
 msgstr "SCI-Port"
 
@@ -2188,9 +2182,8 @@ msgid "The port component of the SCI (Secure Channel Identifier)"
 msgstr "Die Port-Komponente des SCI (Secure Channel Identifier)"
 
 #: src/connection-editor/ce-page-macsec.ui:291
-#, fuzzy
 msgid "_Encrypt"
-msgstr "Verschlüsseln"
+msgstr "_Verschlüsseln"
 
 #: src/connection-editor/ce-page-macsec.ui:296
 msgid "Whether the transmitted traffic must be encrypted"
@@ -2930,16 +2923,14 @@ msgid "_Public key"
 msgstr ""
 
 #: src/connection-editor/ce-page-wireguard.ui:173
-#, fuzzy
 msgid "Allowed _IPs"
-msgstr "Zulässige Methoden"
+msgstr "Zulässige _IP-Adressen"
 
 #: src/connection-editor/ce-page-wireguard.ui:187
 msgid "_Endpoint"
 msgstr ""
 
 #: src/connection-editor/ce-page-wireguard.ui:201
-#, fuzzy
 msgid "Pre_shared key"
 msgstr "Gemeinsamer Schlüssel"
 
@@ -2983,27 +2974,24 @@ msgid "seconds"
 msgstr ""
 
 #: src/connection-editor/ce-page-wireguard.ui:313
-#, fuzzy
 msgid "Sho_w preshared key"
-msgstr "Schlüssel an_zeigen"
+msgstr "Gemeinsame Schlüssel an_zeigen"
 
 #: src/connection-editor/ce-page-wireguard.ui:386
 msgid "The name of the wireguard interface to create."
 msgstr ""
 
 #: src/connection-editor/ce-page-wireguard.ui:400
-#, fuzzy
 msgid "Private _key"
-msgstr "Geheimer %s-_Schlüssel"
+msgstr "Geheimer _Schlüssel"
 
 #: src/connection-editor/ce-page-wireguard.ui:413
 msgid "The 256 bit private key in base64 encoding"
 msgstr ""
 
 #: src/connection-editor/ce-page-wireguard.ui:429
-#, fuzzy
 msgid "_Listen port"
-msgstr "_Minimale Ports"
+msgstr "Horchender Port"
 
 #: src/connection-editor/ce-page-wireguard.ui:442
 msgid ""
@@ -3030,9 +3018,8 @@ msgid ""
 msgstr ""
 
 #: src/connection-editor/ce-page-wireguard.ui:554
-#, fuzzy
 msgid "_Show private key"
-msgstr "Geheimer %s-_Schlüssel"
+msgstr "Geheimen _Schlüssel zeigen"
 
 #: src/connection-editor/ce-page-wireguard.ui:641
 msgid "<b>_Peers</b>"
@@ -3251,7 +3238,7 @@ msgstr "Team"
 #: src/connection-editor/connection-helpers.c:106
 #: src/connection-editor/page-bridge.c:216
 msgid "Bridge"
-msgstr "Brücke"
+msgstr "Bridge"
 
 #: src/connection-editor/connection-helpers.c:108
 #: src/connection-editor/page-ip-tunnel.c:159
@@ -3265,9 +3252,8 @@ msgstr "MACsec"
 
 #: src/connection-editor/connection-helpers.c:110
 #: src/connection-editor/page-wireguard.c:510
-#, fuzzy
 msgid "WireGuard"
-msgstr "Kabelgebunden"
+msgstr "WireGuard"
 
 #: src/connection-editor/connection-helpers.c:112
 #: src/connection-editor/connection-helpers.c:374
@@ -3673,7 +3659,7 @@ msgstr "_Einwahlverbindung"
 
 #: src/connection-editor/page-bond.c:432
 msgid "Could not load bond user interface."
-msgstr "Bündel-Benutzerschnittstelle konnte nicht geladen werden."
+msgstr "Benutzerschnittstelle für Bonds konnte nicht geladen werden."
 
 #: src/connection-editor/page-bond.c:551
 msgid "primary"
@@ -3682,27 +3668,27 @@ msgstr "Primär"
 #: src/connection-editor/page-bond.c:606
 #, c-format
 msgid "Bond connection %d"
-msgstr "Bündel-Verbindung %d"
+msgstr "Bond-Verbindung %d"
 
 #. Translators: a "Bridge Port" is a network
 #. * device that is part of a bridge.
 #.
 #: src/connection-editor/page-bridge-port.c:91
 msgid "Bridge Port"
-msgstr "Port einer Brücke"
+msgstr "Port einer Bridge"
 
 #: src/connection-editor/page-bridge-port.c:93
 msgid "Could not load bridge port user interface."
-msgstr "Brücken-Port-Benutzerschnittstelle konnte nicht geladen werden."
+msgstr "Benutzerschnittstelle für Bride-Ports konnte nicht geladen werden."
 
 #: src/connection-editor/page-bridge.c:219
 msgid "Could not load bridge user interface."
-msgstr "Bündel-Benutzerschnittstelle konnte nicht geladen werden."
+msgstr "Benutzerschnittstelle für Bridges konnte nicht geladen werden."
 
 #: src/connection-editor/page-bridge.c:335
 #, c-format
 msgid "Bridge connection %d"
-msgstr "Brückenverbindung %d"
+msgstr "Bridge-Verbindung %d"
 
 #: src/connection-editor/page-dcb.c:610
 msgid "DCB"
@@ -4067,7 +4053,7 @@ msgstr "Benutzerschnittstelle für Netzwerk-Team konnte nicht geladen werden."
 #: src/connection-editor/page-team.c:1114
 #, c-format
 msgid "Team connection %d"
-msgstr "Netzwerk-Team %d"
+msgstr "Team-Verbindung %d"
 
 #. Translators: the first %s is a device name (eg, "em1"), the
 #. * second is a connection name (eg, "Auto Ethernet").
@@ -4230,19 +4216,17 @@ msgid "Public key"
 msgstr ""
 
 #: src/connection-editor/page-wireguard.c:268
-#, fuzzy
 msgid "Allowed IPs"
-msgstr "Zulässige Methoden"
+msgstr "Zulässige IP-Addressen"
 
 #: src/connection-editor/page-wireguard.c:512
-#, fuzzy
 msgid "Could not load WireGuard user interface."
-msgstr "Benutzerschnittstelle für Netzwerk-Team konnte nicht geladen werden."
+msgstr "Benutzerschnittstelle für Wireguard konnte nicht geladen werden."
 
 #: src/connection-editor/page-wireguard.c:628
-#, fuzzy, c-format
+#, c-format
 msgid "WireGuard connection %d"
-msgstr "Netzwerk-Team %d"
+msgstr "WireGuard-Verbindung %d"
 
 #: src/connection-editor/vpn-helpers.c:118
 #, c-format
@@ -4500,14 +4484,6 @@ msgstr "DER-, PEM-, oder PKCS#12-Privatschlüssel (*.der, *.pem, *.p12, *.key)"
 #~ msgid "missing EAP password"
 #~ msgstr "EAP-Passwort fehlt"
 
-#, fuzzy
-#~ msgid "P_rivate Key Passphrase"
-#~ msgstr "WEP 128-bit-Passphrase"
-
-#, fuzzy
-#~ msgid "Sh_ow passphrase"
-#~ msgstr "Passwörter _zeigen"
-
 #~ msgid "missing EAP-TLS identity"
 #~ msgstr "EAP-TLS-Identität fehlt"
 
@@ -4565,10 +4541,6 @@ msgstr "DER-, PEM-, oder PKCS#12-Privatschlüssel (*.der, *.pem, *.p12, *.key)"
 #~ msgid "missing leap-password"
 #~ msgstr "LEAP-Passwort fehlt"
 
-#, fuzzy
-#~ msgid "missing password"
-#~ msgstr "EAP-Passwort fehlt"
-
 #~ msgid "_Type"
 #~ msgstr "_Typ"
 
@@ -4604,9 +4576,6 @@ msgstr "DER-, PEM-, oder PKCS#12-Privatschlüssel (*.der, *.pem, *.p12, *.key)"
 
 #~ msgid "Open System"
 #~ msgstr "Offenes System"
-
-#~ msgid "Shared Key"
-#~ msgstr "Gemeinsamer Schlüssel"
 
 #~ msgid "1 (Default)"
 #~ msgstr "1 (Vorgabe)"
@@ -4680,10 +4649,6 @@ msgstr "DER-, PEM-, oder PKCS#12-Privatschlüssel (*.der, *.pem, *.p12, *.key)"
 #~ msgstr ""
 #~ "Legt fest, ob die Einstellungen in eine neue Version übernommen werden "
 #~ "sollen."
-
-#, fuzzy
-#~ msgid "Disable WiFi Create"
-#~ msgstr "Das Erstellen von Wi-Fi-Netzen ausschalten"
 
 #~ msgid ""
 #~ "Set to true to disable creation of adhoc networks when using the applet."
@@ -4785,22 +4750,11 @@ msgstr "DER-, PEM-, oder PKCS#12-Privatschlüssel (*.der, *.pem, *.p12, *.key)"
 #~ msgid "Set up a Mobile Broadband Connection"
 #~ msgstr "Eine mobile Breitbandverbindung einrichten"
 
-#, fuzzy
-#~ msgid "Country or region:"
-#~ msgstr "Land oder Region"
-
 #~ msgid "Choose your Provider’s Country or Region"
 #~ msgstr "Land oder Region des Dienstanbieters auswählen"
 
 #~ msgid "Select your provider from a _list:"
 #~ msgstr "Dienstanbieter aus einer _Liste auswählen:"
-
-#, fuzzy
-#~ msgid ""
-#~ "I can’t find my provider and I wish to set up the connection _manually:"
-#~ msgstr ""
-#~ "Ich kann meinen Dienstanbieter nicht finden und möchte ihn _manuell "
-#~ "eingeben:"
 
 #~ msgid "My provider uses GSM technology (GPRS, EDGE, UMTS, HSPA)"
 #~ msgstr ""
